--- a/tests/expected/plain-md.html
+++ b/tests/expected/plain-md.html
@@ -4,10 +4,12 @@
 <h1 id="this-is-a-test">This is a test</h1>
 <p>One.</p>
 <h2 id="second-heading">Second heading</h2>
+<h2 id="second-heading-part-2">Second heading part 2</h2>
 <h3 id="third-heading">Third heading</h3>
 <h4 id="4th-heading">4th heading</h4>
 <h5 id="5th-heading">5th heading</h5>
-<h5 id="6th-heading">6th heading!</h5>
+<h6 id="6th-heading">6th heading!</h6>
+<h2 id="and-back">And Back</h2>
 
 </body>
 </html>
