Structure test files

--- a/tests/expected/jinja/file.html
+++ b/tests/expected/jinja/file.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>jinja-file.html</title>
+    <title>file.html</title>
 </head>
 <body>
-file: jinja-file.html
-file.name: jinja-file
+file: file.html
+file.name: file
 file.extension: html
 
 </body>
