Add scss to blog example

--- a/examples/markdown-blog/index.html
+++ b/examples/markdown-blog/index.html
@@ -7,7 +7,16 @@
     <title>Lightweight Example</title>
 </head>
 <body>
-<h1>Hello</h1>
-<p>This is an <code>index.html</code> page</p>
+
+<nav>
+    <a href="/">index</a>
+    <a href="/posts.html">posts</a>
+</nav>
+
+<main>
+    <h1>Hello World</h1>
+    <p>This is an <code>index.html</code> page</p>
+</main>
+
 </body>
 </html>
