Add feeds to example

--- a/examples/markdown-blog/index.html
+++ b/examples/markdown-blog/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link type="text/css" rel="stylesheet" href="/static/css/style.css" media="screen,projection">
+    <link rel="alternate" type="application/rss+xml" title="New Posts" href="/posts.rss.xml"/>
+    <link rel="alternate" type="application/atom+xml" title="New Posts" href="/posts.atom.xml"/>
     <title>Lightweight Example</title>
 </head>
 <body>
