Rename file name without extension to stem

--- a/tests/resources/jinja/file.html
+++ b/tests/resources/jinja/file.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 file: {{ source.file }}
-file.name: {{ source.file.name }}
+file.name: {{ source.file.stem }}
 file.extension: {{ source.file.extension }}
 
 </body>
