Rename file attribute to filename

--- a/tests/expected/jinja/file.html
+++ b/tests/expected/jinja/file.html
@@ -5,9 +5,9 @@
     <title>file.html</title>
 </head>
 <body>
-file: file.html
-file.name: file
-file.extension: html
+filename: file.html
+filename.name: file
+filename.extension: html
 
 </body>
 </html>
