--- a/tests/expected/md/file.html
+++ b/tests/expected/md/file.html
@@ -1,9 +1,9 @@
 <html lang="en">
 <head><title>plain.md</title></head>
 <body>
-file: plain.md
-file.name: plain
-file.extension: md
+filename: plain.md
+filename.name: plain
+filename.extension: md
 
 </body>
 </html>
