--- a/tests/resources/jinja/file.html
+++ b/tests/resources/jinja/file.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ source.file }}</title>
+    <title>{{ source.filename }}</title>
 </head>
 <body>
-file: {{ source.file }}
-file.name: {{ source.file.stem }}
-file.extension: {{ source.file.extension }}
+filename: {{ source.filename }}
+filename.name: {{ source.filename.stem }}
+filename.extension: {{ source.filename.extension }}
 
 </body>
 </html>
