--- a/examples/markdown-blog/pages/posts.html
+++ b/examples/markdown-blog/pages/posts.html
@@ -1,9 +1,11 @@
 {% extends "templates/base.html" %}
 
+{% block title %} Lightweight | Posts {% endblock %}
+
 {% block main %}
     <ul>
         {%- for path, post in site['posts'].items() %}
-            <li><a href="{{ path }}">{{ post.filename }}</a></li>
+            <li><a href="{{ path | url }}">{{ post.filename }}</a></li>
         {%- endfor %}
     </ul>
 {% endblock %}
