Add icons and footer

--- a/examples/markdown-blog/pages/index.html
+++ b/examples/markdown-blog/pages/index.html
@@ -3,12 +3,13 @@
 {% block main %}
     <p>Static website generator without magic.</p>
 
-    <p>Most frameworks for static site generation are declarative.
-        This means they require a lot of time to get started
-        and even more to properly extend them to suit your needs.</p>
+    <h2>Code over configuration</h2>
 
-    <p>Lightweight is different in this manner. It’s core API is handful,
-        but from there you’re free to go in any direction you want.</p>
+    <p>Most frameworks for static site generation are declarative.
+        They require a lot of time to get started and then they may not be flexible enough.</p>
+
+    <p>Lightweight is different in this manner.
+        It’s core API is handful, but from there you’re free to go in any direction you want.</p>
 
 
     <div class="double-container">
@@ -61,5 +62,9 @@ site.include('static/img')
 
 # Execute all included content.
 site.render()</code></pre>
+
+    <h2>Getting started</h2>
+
+    <p>TBD</p>
 
 {% endblock %}
