--- a/tests/site/index.html
+++ b/tests/site/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test Site</title>
-</head>
-<body>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Test Site</title></head><body></body></html>
