Fix markdown tests

--- a/tests/expected/md/toc.html
+++ b/tests/expected/md/toc.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><title>None</title></head>
+<head><title>This is a test</title></head>
 <body>
 <ul id="table-of-content">
 <li><a href="#this-is-a-test">This is a test</a>
