--- a/tests/expected/md/plain.html
+++ b/tests/expected/md/plain.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head><title>None</title></head>
+<head><title>This is a test</title></head>
 <body>
 <h1 id="this-is-a-test">This is a test</h1>
 <p>One.</p>
