Order, preview and ToC object for markdown

--- a/tests/expected/md/toc.html
+++ b/tests/expected/md/toc.html
@@ -1,13 +1,15 @@
 <html lang="en">
 <head><title>This is a test</title></head>
 <body>
-<ul id="table-of-content">
+
+<ul id="table-of-contents">
 <li><a href="#this-is-a-test">This is a test</a>
 <ul>
 <li><a href="#second-heading">Second heading</a></li>
 <li><a href="#second-heading-part-2">Second heading part 2</a>
 <ul>
-<li><a href="#third-heading">Third heading</a></li></ul>
+<li><a href="#third-heading">Third heading</a></li>
+</ul>
 </li>
 <li><a href="#and-back">And Back</a></li>
 </ul>
