Add feeds to features

--- a/examples/lightweight-home/pages/index.html
+++ b/examples/lightweight-home/pages/index.html
@@ -20,6 +20,7 @@
                 <li><a href="https://www.python.org"><span>Python</span></a> Declarations</li>
                 <li><a href="https://jinja.palletsprojects.com/"><span>Jinja2</span></a> Templates</li>
                 <li><a href="https://daringfireball.net/projects/markdown/"><span>Markdown</span></a> Rendering</li>
+                <li>RSS/Atom Feed</li>
                 <li><a href="https://sass-lang.com"><span>SCSS</span></a> Superpowers</li>
             </ul>
         </div>
