--- a/examples/lightweight-home/pages/index.html
+++ b/examples/lightweight-home/pages/index.html
@@ -52,7 +52,7 @@ site = Site(url='https://example.com')
 site.include('index.html', render('index.html'))
 
 # Render list of Markdown files.
-[site.include(f'posts/{post.filename.stem}.html', post) for post in blog_posts()]
+[site.include(f'posts/{post.path.stem}.html', post) for post in blog_posts()]
 
 # Render SCSS.
 site.include('static/css/style.css', sass('static/scss/lightweight.scss'))
