Add a link to PyPI

--- a/examples/lightweight-home/pages/index.html
+++ b/examples/lightweight-home/pages/index.html
@@ -28,7 +28,7 @@
         <div>
             <h2>Installation</h2>
 
-            <p>Get it from PyPI.</p>
+            <p>Get it from <a href="https://pypi.org/project/lightweight/"><span>PyPI</span></a>:</p>
 
             <pre><code class="bash">pip install lightweight</code></pre>
         </div>
