--- a/tests/resources/jinja/file.html
+++ b/tests/resources/jinja/file.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ source.path.name }}</title>
+    <title>{{ content.source_path.name }}</title>
 </head>
 <body>
-filename: {{ source.path.name }}
-filename.name: {{ source.path.stem }}
-filename.extension: {{ source.path.suffix }}
+filename: {{ content.source_path.name }}
+filename.name: {{ content.source_path.stem }}
+filename.extension: {{ content.source_path.suffix }}
 
 </body>
 </html>
