Site URL must end with /

--- a/tests/expected/md/md-link.html
+++ b/tests/expected/md/md-link.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head><title>None</title></head>
 <body>
-<p><a href="https://example.com/plain">Link to another Markdown file</a></p>
-<p><a href="https://example.com/plain">Link to another Markdown file</a></p>
+<p><a href="https://example.org/plain">Link to another Markdown file</a></p>
+<p><a href="https://example.org/plain">Link to another Markdown file</a></p>
 
 </body>
 </html>
