Strip jinja blocks

--- a/tests/site/page.html
+++ b/tests/site/page.html
@@ -1,2 +1,4 @@
 {% extends 'base.html' %} {# Must resolve from local directory, due to cwd template resolvement. #}
-{% block content %}Hello World!{% endblock %}
+{% block content %}
+Hello World!
+{% endblock %}
