Replace the project_template

--- a/lightweight/project-template/blog.html
+++ b/lightweight/project-template/blog.html
@@ -1,4 +1,4 @@
-{% extends "templates/base.html" %}
+{% extends "_templates_/base.html" %}
 
 {% block title %} {! site.title !} | Posts {% endblock %}
 
