--- a/lightweight/project-template/labs.html
+++ b/lightweight/project-template/labs.html
@@ -1,4 +1,4 @@
-{% extends "templates/base.html" %}
+{% extends "_templates_/base.html" %}
 
 {%- block main_class -%}wide{%- endblock -%}
 {% block main %}
