--- a/lightweight/project-template/index.html
+++ b/lightweight/project-template/index.html
@@ -1,4 +1,4 @@
-{% extends "templates/base.html" %}
+{% extends "_templates_/base.html" %}
 
 {% block main %}
     <p>Welcome to <a class="lw" href="https://drach.uk/lightweight">Lightweight</a>:
@@ -57,13 +57,36 @@ site.include('index.html', jinja('index.html'))
     <p>You can also pass arguments to Jinja templates.
         This is done with keyword arguments provided to <code>jinja</code>.
         Try controlling the spoon: </p>
-    {% if spoon is not defined or (spoon is defined and spoon is not none) %}
-        <img src="{{ site / 'img/matrix/spoon.jpg' }}"
-             alt="Matrix boy with a straight spoon."
-             title="Do not try and bend the spoon. That's impossible. Instead... only try to realize the truth.">
+    {% if spoon is defined and spoon is none %}
+        <img src="{{ site / 'img/matrix/no-spoon.jpg' }}"
+             alt="A bent spoon"
+             title="There is no spoon.">
     {% else %}
-        <img src="{{ site / 'img/matrix/no-spoon.jpg' }}" alt="Spoon bent" title="There is no spoon.">
+        <img src="{{ site / 'img/matrix/spoon.jpg' }}"
+             alt="Matrix boy with an unbent spoon."
+             title="Do not try and bend the spoon. That's impossible. Instead... only try to realize the truth.">
     {% endif %}
+
+    <p>The code with the image looks like this:</p>
+
+    <pre><code>
+    {%- raw -%}
+{% if spoon is defined and spoon is none %}
+    &lt;img src="{{ site / 'img/matrix/no-spoon.jpg' }}"
+         alt="A bent spoon"
+         title="There is no spoon."&gt;
+{% else %}
+    &lt;img src="{{ site / 'img/matrix/spoon.jpg' }}"
+         alt="Matrix boy with an unbent spoon."
+         title="Do not try and bend the spoon. That's impossible. Instead... only try to realize the truth."&gt;
+{% endif %}
+    {%- endraw -%}
+    </code></pre>
+
+    <p>We do not pass the <code>spoon</code> to the template, so it is undefined.
+        Let’s pass <code>None</code> to render the true branch of the if.</p>
+
+    <pre><code class="python">site.include('index.html', jinja('index.html', spoon=None))</code></pre>
 
 
     <h4>Add some style</h4>
