Add 2 more videos to labs

--- a/lightweight/project-template/labs.html
+++ b/lightweight/project-template/labs.html
@@ -20,6 +20,8 @@
             'in_jF1W3jUg?start=63',
             'BOK-2G9GLfY?start=441',
             'QU5sNR16zc0?start=297',
+            'AP6IbRRvYXg',
+            'AL67h1A7r6E?start=149',
         ];
 
         function youtubeElement(id) {
