--- a/lightweight/project-template/index.html
+++ b/lightweight/project-template/index.html
@@ -54,22 +54,23 @@ site.include('index.html', jinja('index.html'))
     <p>This piece of code creates content from rendering the provided <code>index.html</code> Jinja template
         and places it under the same to the output directory.</p>
 
-    <p>You can also pass arguments to Jinja templates.
-        This is done with keyword arguments provided to <code>jinja(...)</code>.
-        Try controlling the spoon: </p>
-    {% if spoon is defined and spoon is none %}
-        <img src="{{ site / 'img/matrix/no-spoon.jpg' }}"
-             alt="A bent spoon"
-             title="There is no spoon.">
-    {% else %}
-        <img src="{{ site / 'img/matrix/spoon.jpg' }}"
-             alt="Matrix boy with an unbent spoon."
-             title="Do not try and bend the spoon. That's impossible. Instead… only try to realize the truth.">
-    {% endif %}
+    <details open="{{ 'true' if spoon is defined else 'false' }}">
+        <summary>You can also pass arguments to Jinja templates.</summary>
+        <p>This is done with keyword arguments provided to <code>jinja(...)</code>.
+            Try controlling the spoon: </p>
+        {% if spoon is defined and spoon is none %}
+            <img src="{{ site / 'img/matrix/no-spoon.jpg' }}"
+                 alt="A bent spoon"
+                 title="There is no spoon.">
+        {% else %}
+            <img src="{{ site / 'img/matrix/spoon.jpg' }}"
+                 alt="Matrix boy with an unbent spoon."
+                 title="Do not try and bend the spoon. That's impossible. Instead… only try to realize the truth.">
+        {% endif %}
 
-    <p>The code with the image looks like this:</p>
+        <p>The code with the image looks like this:</p>
 
-    <pre><code>
+        <pre><code class="html">
     {%- raw -%}
 {% if spoon is defined and spoon is none %}
     &lt;img src="{{ site / 'img/matrix/no-spoon.jpg' }}"
@@ -81,12 +82,13 @@ site.include('index.html', jinja('index.html'))
          title="Do not try and bend the spoon. That's impossible. Instead… only try to realize the truth."&gt;
 {% endif %}
     {%- endraw -%}
-    </code></pre>
+        </code></pre>
 
-    <p>We do not pass the <code>spoon</code> to the template, so it is undefined.
-        Let’s pass <code>None</code> to render the true branch of the if.</p>
+        <p>We do not pass the <code>spoon</code> to the template, so it is undefined.
+            Let’s pass <code>None</code> to render the true branch of the if.</p>
 
-    <pre><code class="python">site.include('index.html', jinja('index.html', spoon=None))</code></pre>
+        <pre><code class="python">site.include('index.html', jinja('index.html', spoon=None))</code></pre>
+    </details>
 
 
     <h4>Add some style</h4>
