Get rid of grid style, speciific to labs

--- a/lightweight/project-template/labs.html
+++ b/lightweight/project-template/labs.html
@@ -9,8 +9,7 @@
             <button id="show-me" onclick="showLabs()">Show me</button>
         </p>
     </div>
-    <div id="labs" class="grid none">
-    </div>
+    <div id="labs" class="none"></div>
 {% endblock %}
 
 {% block script %}
