Remove feeds, authors

--- a/lightweight/project-template/_templates_/base.html
+++ b/lightweight/project-template/_templates_/base.html
@@ -44,7 +44,7 @@
 
 <footer>
     <p>
-        © {! ctx.generated.year !} {! site.authors | map(attribute='name') | join(' &amp; ') !}
+        © {! ctx.generated.year !}
         |
         made with <a href="https://drach.uk/lightweight" class="lw">Lightweight</a>
     </p>
