Update links to lightweight domain

--- a/lightweight/project-template/_templates_/base.html
+++ b/lightweight/project-template/_templates_/base.html
@@ -41,7 +41,7 @@
     <p>
         © {! ctx.generated.year !}
         |
-        made with <a href="https://drach.uk/lightweight" class="lw">Lightweight</a>
+        made with <a href="https://lightweight.site" class="lw">Lightweight</a>
     </p>
 </footer>
 
