--- a/lightweight/project-template/index.html
+++ b/lightweight/project-template/index.html
@@ -1,7 +1,7 @@
 {% extends "_templates_/base.html" %}
 
 {% block main %}
-    <p>Welcome to <a class="lw" href="https://drach.uk/lightweight">Lightweight</a>:
+    <p>Welcome to <a class="lw" href="https://lightweight.site">Lightweight</a>:
         a static website generator without magic.</p>
 
     <p>You’re running version <b>{{ ctx.version }}</b>.</p>
