Update year to human era

--- a/lightweight/project-template/_templates_/base.html
+++ b/lightweight/project-template/_templates_/base.html
@@ -39,7 +39,7 @@
 
 <footer>
     <p>
-        © {! ctx.generated.year !}
+        © {! ctx.generated.year | human_era !}
         |
         made with <a href="https://lightweight.site" class="lw">Lightweight</a>
     </p>
